tests/sksl/errors/LayoutRepeatedQualifiers.glsl
### Compilation failed:

error: 14: layout qualifier 'origin_upper_left' appears more than once
    origin_upper_left,
    ^^^^^^^^^^^^^^^^^
error: 15: layout qualifier 'push_constant' appears more than once
    push_constant,
    ^^^^^^^^^^^^^
error: 16: layout qualifier 'blend_support_all_equations' appears more than once
    blend_support_all_equations,
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: 17: layout qualifier 'color' appears more than once
    color,
    ^^^^^
error: 18: layout qualifier 'location' appears more than once
    location = 2,
    ^^^^^^^^
error: 19: layout qualifier 'offset' appears more than once
    offset = 2,
    ^^^^^^
error: 20: layout qualifier 'binding' appears more than once
    binding = 2,
    ^^^^^^^
error: 21: layout qualifier 'index' appears more than once
    index = 2,
    ^^^^^
error: 22: layout qualifier 'set' appears more than once
    set = 2,
    ^^^
error: 23: layout qualifier 'builtin' appears more than once
    builtin = 2,
    ^^^^^^^
error: 24: layout qualifier 'input_attachment_index' appears more than once
    input_attachment_index = 2
    ^^^^^^^^^^^^^^^^^^^^^^
error: 1: 'layout(color)' is only permitted in runtime effects
layout (
^^^^^^^^...
error: 1: 'layout(color)' is only permitted on 'uniform' variables
layout (
^^^^^^^^...
error: 1: 'layout(color)' is not permitted on variables of type 'float'
layout (
^^^^^^^^...
14 errors
